<resources>
    <string name="app_name">FireInsta</string>
    <string name="continue_with_email">Continue with Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="text_success">Success</string>
    <string name="text_error">Error</string>
    <string name="text_ok">Okay</string>
    <string name="message">Message</string>
    <string name="display_name">Display Name</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="posts">posts</string>
    <string name="upload">Upload</string>
    <string name="what_do_you_think_of_this_picture">What do you think of this picture?</string>
    <string name="post">Post</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="search">Search</string>
    <string name="photos">photos</string>
    <string name="people">People</string>
    <string name="photos_sentence_case">Photos</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="caption">Caption</string>
    <string name="no_posts_to_show">No posts to show!</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="user_has_no_posts">User has no posts</string>
    <string name="sign_out">Sign Out</string>

</resources>