<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LauncherFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_picker_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_photo_camera_24" />


        <TextView
            android:id="@+id/text_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview_logo"
            android:fontFamily="@font/yesteryear_regular"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="80dp" />


        <LinearLayout
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_style_simple"
                android:backgroundTint="@color/primaryBtnColor"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <Button
                android:layout_marginBottom="10dp"
                android:id="@+id/btn_sign_in"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_style_simple"
                android:text="@string/sign_in" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>