<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.main.account.ProfileFragment">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_profile_picture"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_account_circle_24" />

                    <TextView
                        android:id="@+id/text_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/londrinasolid_black"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textAllCaps="true"
                        android:textColor="#000"
                        android:textSize="40sp"
                        tools:text="Masroor Aijaz" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_posts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/londrinasolid_black"
                            android:textColor="#000"
                            android:textSize="20sp"
                            tools:text="223" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posts" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/londrinasolid_black"
                            android:textColor="#000"
                            android:textSize="20sp"
                            tools:text="223" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/londrinasolid_black"
                            android:textColor="#000"
                            android:textSize="20sp"
                            tools:text="223" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp">

                    <Button
                        android:id="@+id/btn_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style_simple"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="30dp"
                        android:text="@string/follow"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_unfollow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style_simple"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="30dp"
                        android:text="@string/unfollow"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/text_no_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_card_view"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="30dp"
            android:text="@string/user_has_no_posts"
            android:textAlignment="center"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_profile_pics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_card_view" />


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>