<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".ui.auth.LoginFragment">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/sign_up_banner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimaryDark">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bebasneue_regular"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="50dp" />
            </RelativeLayout>

            <View
                android:id="@+id/placeholder_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/sign_up_banner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/placeholder_view"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="10dp">


                <EditText
                    android:id="@+id/edit_text_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />


                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_style_simple"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:paddingHorizontal="50dp"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forgot_your_password"
                    android:textSize="15sp" />
            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>