<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/sign_up_banner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimaryDark"
                android:padding="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_baseline_how_to_reg_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/bebasneue_regular"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="50dp" />
            </RelativeLayout>

            <View
                android:id="@+id/placeholder_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/sign_up_banner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/placeholder_view"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edit_text_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/display_name"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/edit_text_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />


                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edit_text_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    android:inputType="textPassword" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_style_simple"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>